santrauka ir pdf

--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -56,6 +56,10 @@
 \end{itemize}
 \tableofcontents
 \section{Santrauka}
+Šio prototipo testavimo vykdytojų pagrindą sudarė studentai, tačiau buvo ir keletas prototipo kūrėjų šeimos narių. Dalyviai buvo patys paprašyti įsivertinti savo IT žinias bei gebėjimus, kadangi kitiems tai įvertinti yra pakankamai sudėtinga. Dalyvių pagrindą sudarė vidutinių ir gerų IT gebėjimų žmonės (šio produkto pagrindiniai naudotojai), bei keletas save įsiverinę kaip ekspertus. Visi dalyviai turi jau nemažą patirtį naudojant elektronine bankininkystę, kas jiem suteikia papildomų žinių tikrinant šį prototipą. \par
+Prieš testavimą kiekvienas dalyvis gavo klausimyną jo charakteristikoms atskleisti, o po testavimo buvo pateiktas kitas klausimynas, kurio paskirtis buvo apibendrinti ir sustruktūrizuoti vertintojo nuomonę ir pastebėjimus apie tikrintą prototipą. Pats testavimas vyko keliose skirtingose aplinkose (dalis dalyvių testavo prie MIF patalpose esančių kompiuterių, dalis savo namuose), tačiau mūsų nuomone, testavimo rezultatų tai neįtakojo. \par
+Testavimui buvo pasirinktas mąstymo garsiai metodas, tačiau net ir vykdytojui nutilus, jis nebuvo raginamas kalbėti pateikiant klausimus. \par
+Testavimo metu buvo fiksuojami vertintojo žingsniai, skaičiuojamos metrikos, kurios, visiems dalyviams atlikus testavimą buvo apibendrintos ir sudėtos į atitinkamas lenteles grupuojant pagal užduočių numerius.
 \section{Įvadas}
 \subsectionnonum{Prototipas}
 Prototipe įgyvendintas internetinės bankininkystės sistema, šis prototipas yra minimalistinis, kad būtų patogesnis mažai ir vidutiniškai patyrusiems IT vartotojams, įgyvendintos svarbiausios bei dažniausiai naudojamos banko funkcijos.
@@ -94,7 +98,7 @@ Matavimai:
 	\item Pagalbos prašymų skaičius.
 \end{itemize}
 \subsection{Metodas}
-Stebėjimai testuojant su naudotojais. Vartotojai užduotis atlieka vieni. Prieš testavimą vartotojas gaus klausimyną, kuris nustatis vartotojo charakteristika, tada bus pateikta internetinė sąsaja. Iš užduočių sąrašo prašysime vartotojo vykdyti užduotis po vieną ir stebėsime vartotojo sėkmę. Vartotojas bet kuriuo metu galės prašyti pagalbos. 
+Stebėjimai testuojant su naudotojais. Vartotojai užduotis atlieka vieni, tačiau jų buvo paprašyta atliekant užduotis karsiai komentuoti jų atliekamus veiksmus. Prieš testavimą vartotojas gaus klausimyną, kuris nustatis vartotojo charakteristika, tada bus pateikta internetinė sąsaja. Iš užduočių sąrašo prašysime vartotojo vykdyti užduotis po vieną ir stebėsime vartotojo sėkmę. Vartotojas bet kuriuo metu galės prašyti pagalbos. 
 \subsection{Aplinka}
 Dalis testavimo vykdoma gyvai, dalis nuotoliniu būdu,naudojant discord programinę įrangą. Abiejais atvejais vartotojo ekranas ir atliekami judesiai buvo stebima mūsų.
 \subsection{Dalyviai}
