--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -257,9 +257,11 @@ Užduoties Nr.&Sėkmingai įvykdė&Vykdymo laiko vidurkis (s)&Kiek kartų kreipt
 13 &  100\% & 15 & 0 & 1 & 2\\ \hline
 \end{tabular}
 \end{center}
+\newpage
 \subsection{Panaudojamumo matai ir siekiai}
 \begin{center}
-	captionof{table}{Panaudojamumo matų ir siekių patikrinimas.}
+	\begin{table}[!ht]
+	\caption{Panaudojamumo matų ir siekių patikrinimas.}
     \begin{tabular}{ |p{12cm}| p{3cm} |}
     \hline
 	Siekis & Ar įvykdytas? \\ \hline
@@ -278,7 +280,8 @@ Užduoties Nr.&Sėkmingai įvykdė&Vykdymo laiko vidurkis (s)&Kiek kartų kreipt
 	90\% žmonių gebės pasinaudoti mokėjimo ruošiniu atlikdami mokėjimą. & Taip. \\ \hline
 	80\% žmonių gebės susikurti mokėjo ruošinį. & Taip. \\ \hline
 
-    \end{tabular}
+		\end{tabular}
+	\end{table}
 \end{center}
 \section{Rekomendacijos}
 
@@ -317,6 +320,7 @@ Užduoties Nr.&Sėkmingai įvykdė&Vykdymo laiko vidurkis (s)&Kiek kartų kreipt
 			\item Kaip vertinate sistemą bendrai?
 			\item Ar susidūrėte su sunkumais, netikėtumais?
 	\end{itemize}
+	\newpage
 \subsection{Dalyvių rezultatų lentelės}
 \begin{center}
 	\begin{tabular}{ |p{1cm} | p{3cm} | p{4cm} | p{4cm} | p{3cm} |}
@@ -329,6 +333,7 @@ ID&Kas labiausiai patiko?&Kas labiausiai nepatiko?&Kaip vertinate sistemą bendr
 5&Intuityvus meniu.&Ruošiniai.&Neišdirbta, bet perspektyvi.&Ruošiniai nepasiekiami standartinėje vietoje.\\ \hline
 \end{tabular}
 \end{center}
+\newpage
 \subsection{dalyvio sutikimo dalyvauti testavime raštas}
 \begin{figure}[ht]
 	\centering
